--- a/html/about.html
+++ b/html/about.html
@@ -30,7 +30,9 @@
         </nav>
         <!-- end nav section -->
     </div>
+    <!-- start main section  -->
     <main>
+        <!-- start heading content section  -->
         <div class="blue content-padding">
             <h1 class="heading">About Us</h1>
             <p class="heading-text">
@@ -39,6 +41,8 @@
                 high-quality software that helps our clients achieve their goals and drive growth.
             </p>
         </div>
+        <!-- end heading content section  -->
+        <!-- start subtext section  -->
         <div class="card-container content-padding">
             <div class="inner-box">
                 <img src="../img/team.jpg" alt="Team">
@@ -89,9 +93,12 @@
                 </ul>
             </div>
         </div>
+        <!-- end subtext section  -->
         <div class="content-padding">
             <h1 class="sub-heading">Reviews</h1>
+            <!-- start review card container section  -->
             <div class="card-container">
+                <!-- start card section  -->
                 <div class="card">
                     <div class="img-container">
                         <img class="star" src="../img/star.jpg" alt="Rating">
@@ -110,6 +117,8 @@
                         Olivia Kim (Greenery Landscaping)
                     </p>
                 </div>
+                <!-- end card section  -->
+                <!-- start card section  -->
                 <div class="card">
                     <div class="img-container">
                         <img class="star" src="../img/star.jpg" alt="Rating">
@@ -127,6 +136,8 @@
                         David Wilson (Surfside Vacation Rentals)
                     </p>
                 </div>
+                <!-- end card section  -->
+                <!-- start card section  -->
                 <div class="card">
                     <div class="img-container">
                         <img class="star" src="../img/star.jpg" alt="Rating">
@@ -145,6 +156,8 @@
                         Lisa Rodriguez (City Cake Bakery)
                     </p>
                 </div>
+                <!-- end card section  -->
+                <!-- start card section  -->
                 <div class="card">
                     <div class="img-container">
                         <img class="star" src="../img/star.jpg" alt="Rating">
@@ -163,6 +176,8 @@
                         Raghav Patel  (Global Bullet Logistics)
                     </p>
                 </div>
+                <!-- end card section  -->
+                <!-- start card section  -->
                 <div class="card">
                     <div class="img-container">
                         <img class="star" src="../img/star.jpg" alt="Rating">
@@ -181,6 +196,8 @@
                         William Lee (Acme Corporation Group)
                     </p>
                 </div>
+                <!-- end card section  -->
+                <!-- start card section  -->
                 <div class="card">
                     <div class="img-container">
                         <img class="star" src="../img/star.jpg" alt="Rating">
@@ -199,15 +216,20 @@
                         Samantha Martin(Gem Rock Corporation)
                     </p>
                 </div>
+                <!-- end card section  -->
             </div>
         </div>
+        <!-- start banner design section  -->
         <div class="banner">
             <p>Got any questions?</p>
             <button onclick="location.href = 'contact.html#contact-form';">
                 Contact us
             </button>
         </div>
+        <!-- end banner design section section  -->
     </main>
+    <!-- end main section  -->
+    <!-- start footer section  -->
     <footer>
         <div class="content-padding flex">
             <div class="col1">
@@ -230,6 +252,7 @@
             </div>
             <div class="col2">
                 <h3 class = "hours"> Business Hours </h3>
+                <!-- start table section  -->
                 <table>
                     <tr>
                       <td>Monday</td>
@@ -267,14 +290,21 @@
                       <td></td>
                     </tr>
                   </table>
+                  <!-- end table section  -->
             </div>
             <div class="col3">
+                <!-- start google maps iframe section  -->
                 <iframe
                     src="https://www.google.ca/maps/place/44+Valley+Woods+Rd,+North+York,+ON+M3A+2R6/@43.7547867,-79.3357049,17z/data=!3m1!4b1!4m6!3m5!1s0x89d4d27dc65e142f:0x486009f6c2256cff!8m2!3d43.7547867!4d-79.3335162!16s%2Fg%2F11b8zhmr8y"
-                   style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                   style="border:0;" allowfullscreen="" loading="lazy">
+                </iframe>
+                <!-- end google maps iframe section  -->
             </div>
         </div>
+        <!-- start copyright section  -->
         <p class="copyright">Copyright &copy; 2023 brandname | All rights reserved.</p>
-    </footer>   
+        <!-- end copyright section  -->
+    </footer>
+    <!--end footer section-->   
 </body>
 </html>
