--- a/html/contact.html
+++ b/html/contact.html
@@ -33,12 +33,14 @@
     </div>
     <!-- Use the main area to add the main content of the webpage -->
     <main>
+        <!-- start heading content section  -->
         <div class="blue content-padding">
             <h1 class="heading">Contact us</h1>
             <p class="heading-text">
                 Contact the appropriate personnel; we are here to assist you.
             </p>
         </div>
+        <!-- end heading content section  -->
         <div class="content-padding">
             <h1 class="sub-heading">Contact us</h1>
             <div class="card-container sb">
@@ -48,7 +50,9 @@
                         Get in touch with the right people at brandname. Email a member of our customer care team, marketing team, technical team or HR team.
                     </p>
                 </div>
+                <!-- start form container section  -->
                 <div class="form-container">
+                    <!-- start form section  -->
                     <form id="contact-form" method="get" action="https://www.google.com/">
                         <div class="form-controller-50">
                             <input class="width-99 firstname" type="text" name="firstname" placeholder="First Name" maxlength="100" required>
@@ -79,17 +83,23 @@
                         </div>
                         <input type="submit" value="submit">
                     </form>
+                    <!-- end form section  -->
                 </div>
+                <!-- end form container section  -->
             </div>
         </div>
+        <!-- start banner design section  -->
         <div class="banner">
             <p>Got any questions?</p>
             <button onclick="location.href = 'contact.html#contact-form';">
                 Contact us
             </button>
         </div>
+        <!-- end banner design section  -->
     </main>
+    <!-- end main section  -->
     <!-- Use the footer area to add webpage footer content -->
+    <!-- start footer section  -->
     <footer>
         <div class="content-padding flex">
             <div class="col1">
@@ -112,6 +122,7 @@
             </div>
             <div class="col2">
                 <h3 class = "hours"> Business Hours </h3>
+                <!-- start table section  -->
                 <table>
                     <tr>
                       <td>Monday</td>
@@ -149,14 +160,20 @@
                       <td></td>
                     </tr>
                   </table>
+                  <!-- end table section  -->
             </div>
             <div class="col3">
+                <!-- start google maps iframe section  -->
                 <iframe
                     src="https://www.google.ca/maps/place/44+Valley+Woods+Rd,+North+York,+ON+M3A+2R6/@43.7547867,-79.3357049,17z/data=!3m1!4b1!4m6!3m5!1s0x89d4d27dc65e142f:0x486009f6c2256cff!8m2!3d43.7547867!4d-79.3335162!16s%2Fg%2F11b8zhmr8y"
-                   style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                   style="border:0;" allowfullscreen="" loading="lazy">
+                </iframe>
+                <!-- end google maps iframe section  -->
             </div>
         </div>
+        <!-- start copyright section  -->
         <p class="copyright">Copyright &copy; 2023 brandname | All rights reserved.</p>
+        <!-- end copyright section  -->
     </footer>
 </body>
 </html>
