--- a/html/index.html
+++ b/html/index.html
@@ -32,14 +32,18 @@
         </nav>
         <!-- end nav section -->
     </div>
+    <!-- start main section  -->
     <main>
+        <!-- start heading content section  -->
         <div class="blue content-padding pt0 text-align-center-m">
             <h1 class="heading mt0">The Most Reliable Web Design and Development Services In Toronto</h1>
             <p class="heading-text">
                 Develop and expand with assurance. We have you covered with everything from robust site infrastructure to cutting-edge business solutions.
             </p>
         </div>
+        <!-- end heading content section  -->
         <div>
+            <!-- start subtext section  -->
             <div class="card-container content-padding text-align-center-m">
                 <div class="inner-box">
                     <img src="../img/Team.svg" alt="Team">
@@ -62,9 +66,13 @@
                 </div>
             </div>
         </div>
+        <!-- end subtext section  -->
+        <!-- start services subtext section  -->
         <div class="content-padding">
             <h1 class="sub-heading">Our Services</h1>
+            <!-- start card container section  -->
             <div class="card-container">
+                <!-- start card section  -->
                 <div class="card">
                     <div  class="svc-img">
                         <img src="../img/ui_ux_des.svg" alt="Rating">
@@ -78,6 +86,8 @@
                         Technologies used <strong>Figma, adobe etc.</strong>                    
                     </p>
                 </div>
+                <!-- end card section  -->
+                <!-- start card section  -->
                 <div class="card">
                     <div  class="svc-img">
                         <img src="../img/web_development.svg" alt="Rating">
@@ -91,6 +101,8 @@
                         Technologies used <strong>React, Native React, Angular etc.</strong>  
                     </p>
                 </div>
+                <!-- end card section  -->
+                <!-- start card section  -->
                 <div class="card">
                     <div  class="svc-img">
                         <img src="../img/database.svg" alt="Rating">
@@ -104,13 +116,17 @@
                         Technologies used <strong>Postgres, MongoDB, MySQL etc.</strong>  
                     </p>
                 </div>
+                <!-- end card section  -->
             </div>
+            <!-- end card container section  -->
             <div class="btm-container">
                 <button onclick="location.href = 'services.html';">
                     See all services
                 </button>
             </div>
         </div>
+        <!-- end services subtext section  -->
+        <!-- start portfolio section  -->
         <div class="content-padding blue">
             <h1 class="sub-heading white">Our Portfolio</h1>
             <div class="card-container img-link">
@@ -122,9 +138,13 @@
                 <img src="../img/p6.png" alt="Team">
             </div>
         </div>
+        <!-- end portfolio section  -->
+        <!-- start review section  -->
         <div class="content-padding">
             <h1 class="sub-heading">Reviews</h1>
+            <!-- start card container section  -->
             <div class="card-container">
+                <!-- start card section  -->
                 <div class="card">
                     <div class="img-container">
                         <img class="star" src="../img/star.jpg" alt="Rating">
@@ -143,6 +163,8 @@
                         Olivia Kim (Greenery Landscaping)
                     </p>
                 </div>
+                <!-- end card  section  -->
+                <!-- start card  section  -->
                 <div class="card">
                     <div class="img-container">
                         <img class="star" src="../img/star.jpg" alt="Rating">
@@ -158,6 +180,8 @@
                         David Wilson (Surfside Vacation Rentals)
                     </p>
                 </div>
+                <!-- end card section  -->
+                <!-- start card section  -->
                 <div class="card">
                     <div class="img-container">
                         <img class="star" src="../img/star.jpg" alt="Rating">
@@ -173,20 +197,26 @@
                         Lisa Rodriguez (City Cake Bakery)
                     </p>
                 </div>
+                <!-- end card section  -->
             </div>
+            <!-- end card container section  -->
             <div class="btm-container">
                 <button onclick="location.href = 'about.html';">
                     Know more about us
                 </button>
             </div>
         </div>
+        <!-- start banner design section  -->
         <div class="banner">
             <p>Got any questions?</p>
             <button onclick="location.href = 'contact.html#contact-form';">
                 Contact us
             </button>
         </div>
+        <!-- end banner design section  -->
     </main>
+    <!-- end main section  -->
+    <!-- start footer section  -->
     <footer>
         <div class="content-padding flex">
             <div class="col1">
@@ -209,6 +239,7 @@
             </div>
             <div class="col2">
                 <h3 class = "hours"> Business Hours </h3>
+                <!-- start table section  -->
                 <table>
                     <tr>
                       <td>Monday</td>
@@ -246,14 +277,20 @@
                       <td></td>
                     </tr>
                   </table>
+                  <!-- end table section  -->
             </div>
             <div class="col3">
+                <!-- start google maps iframe section  -->
                 <iframe
                     src="https://www.google.ca/maps/place/44+Valley+Woods+Rd,+North+York,+ON+M3A+2R6/@43.7547867,-79.3357049,17z/data=!3m1!4b1!4m6!3m5!1s0x89d4d27dc65e142f:0x486009f6c2256cff!8m2!3d43.7547867!4d-79.3335162!16s%2Fg%2F11b8zhmr8y"
-                   style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                   style="border:0;" allowfullscreen="" loading="lazy">
+                </iframe>
+                <!-- end google maps iframe section  -->
             </div>
         </div>
+        <!-- start copyright section  -->
         <p class="copyright">Copyright &copy; 2023 brandname | All rights reserved.</p>
+        <!-- end copyright section  -->
     </footer>
 </body>
 </html>
