--- a/html/services.html
+++ b/html/services.html
@@ -30,7 +30,9 @@
         </nav>
         <!-- end nav section -->
     </div>
+    <!-- start main section  -->
     <main>
+        <!-- start heading content section  -->
         <div class="blue content-padding">
             <h1 class="heading">Services</h1>
             <p class="heading-text">
@@ -39,7 +41,9 @@
         </div>
         <div class="content-padding">
             <h1 class="sub-heading">Our Services</h1>
+            <!-- start card container section  -->
             <div class="card-container">
+                <!-- start card section  -->
                 <div class="card">
                     <div  class="svc-img">
                         <img src="../img/ui_ux_des.svg" alt="Rating">
@@ -53,6 +57,8 @@
                         Technologies used <strong>Figma, adobe etc.</strong>                    
                     </p>
                 </div>
+                <!-- end card section  -->
+                <!-- start card section  -->
                 <div class="card">
                     <div  class="svc-img">
                         <img src="../img/web_development.svg" alt="Rating">
@@ -66,6 +72,8 @@
                         Technologies used <strong>React, Native React, Angular etc.</strong>  
                     </p>
                 </div>
+                <!-- end card section  -->
+                <!-- start card section  -->
                 <div class="card">
                     <div  class="svc-img">
                         <img src="../img/database.svg" alt="Rating">
@@ -79,6 +87,8 @@
                         Technologies used <strong>Postgres, MongoDB, MySQL etc.</strong>  
                     </p>
                 </div>
+                <!-- end card section  -->
+                <!-- start card section  -->
                 <div class="card">
                     <div  class="svc-img">
                         <img src="../img/full_stack.svg" alt="Rating">
@@ -92,6 +102,8 @@
                         Technologies used <strong>MERN stack or MEAN stack etc.</strong>
                     </p>
                 </div>
+                <!-- end card section  -->
+                <!-- startcard section  -->
                 <div class="card">
                     <div  class="svc-img">
                         <img src="../img/devops.svg" alt="Rating">
@@ -105,6 +117,8 @@
                         Technologies used <strong>Jenkins, Kubernetes etc.</strong> 
                     </p>
                 </div>
+                <!-- end card section  -->
+                <!-- start card section  -->
                 <div class="card">
                     <div  class="svc-img">
                         <img src="../img/training.svg" alt="Rating">
@@ -118,15 +132,21 @@
                         Technologies we train <strong>Web development, database development etc.</strong> 
                     </p>
                 </div>
+                <!-- end card section  -->
             </div>
+            <!-- end card containersection  -->
         </div>
+        <!-- start banner design section  -->
         <div class="banner">
             <p>Got any questions?</p>
             <button onclick="location.href = 'contact.html#contact-form';">
                 Contact us
             </button>
         </div>
+        <!-- end banner design section  -->
     </main>
+    <!-- end main section  -->
+    <!-- start footer section  -->
     <footer>
         <div class="content-padding flex">
             <div class="col1">
@@ -149,6 +169,7 @@
             </div>
             <div class="col2">
                 <h3 class = "hours"> Business Hours </h3>
+                <!-- start table section  -->
                 <table>
                     <tr>
                       <td>Monday</td>
@@ -186,14 +207,20 @@
                       <td></td>
                     </tr>
                   </table>
+                  <!-- end table section  -->
             </div>
             <div class="col3">
+                <!-- start google maps iframe section  -->
                 <iframe
                     src="https://www.google.ca/maps/place/44+Valley+Woods+Rd,+North+York,+ON+M3A+2R6/@43.7547867,-79.3357049,17z/data=!3m1!4b1!4m6!3m5!1s0x89d4d27dc65e142f:0x486009f6c2256cff!8m2!3d43.7547867!4d-79.3335162!16s%2Fg%2F11b8zhmr8y"
-                   style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                   style="border:0;" allowfullscreen="" loading="lazy">
+                </iframe>
+                <!-- end google maps iframe section  -->
             </div>
         </div>
+        <!-- start copyright section  -->
         <p class="copyright">Copyright &copy; 2023 brandname | All rights reserved.</p>
+        <!-- end copyright section  -->
     </footer>
 </body>
 </html>
