--- a/html/about.html
+++ b/html/about.html
@@ -13,12 +13,12 @@
     <link rel="stylesheet" href="../css/about.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Branc Name</title>
+    <title>BuyYourSite</title>
 </head>
 <body>
     <div class="content-padding navbar blue">
         <header class="logo">
-            BRAND NAME
+            BuyYourSite
         </header>
         <!-- start nav section  -->
         <nav class="nav-container">
@@ -247,7 +247,7 @@
                 </div>
                 <div class="row">
                     <h3> Mail Us </h3>
-                    <a href="mailto:brandname@example.com">brandname@example.com</a>
+                    <a href="mailto:contact@buyyoursite.com">contact@buyyoursite.com</a>
                 </div>
             </div>
             <div class="col2">
@@ -294,17 +294,14 @@
             </div>
             <div class="col3">
                 <!-- start google maps iframe section  -->
-                <iframe
-                    src="https://www.google.ca/maps/place/44+Valley+Woods+Rd,+North+York,+ON+M3A+2R6/@43.7547867,-79.3357049,17z/data=!3m1!4b1!4m6!3m5!1s0x89d4d27dc65e142f:0x486009f6c2256cff!8m2!3d43.7547867!4d-79.3335162!16s%2Fg%2F11b8zhmr8y"
-                   style="border:0;" allowfullscreen="" loading="lazy">
-                </iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2881.870276171568!2d-79.33570488496817!3d43.75479055387437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4d27dc65e142f%3A0x486009f6c2256cff!2s44%20Valley%20Woods%20Rd%2C%20North%20York%2C%20ON%20M3A%202R6!5e0!3m2!1sen!2sca!4v1680556599623!5m2!1sen!2sca" width="400" height="300" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <!-- end google maps iframe section  -->
             </div>
         </div>
         <!-- start copyright section  -->
-        <p class="copyright">Copyright &copy; 2023 brandname | All rights reserved.</p>
+        <p class="copyright">Copyright &copy; 2023 BuyYourSite.com | All rights reserved.</p>
         <!-- end copyright section  -->
     </footer>
-    <!--end footer section-->   
+    <!--end footer-->   
 </body>
 </html>
